; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_submodule.c_submodule_config_key_trunc_puts.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_submodule.c_submodule_config_key_trunc_puts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i8*)* @submodule_config_key_trunc_puts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @submodule_config_key_trunc_puts(i32* %0, i8* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i64, align 8
  store i32* %0, i32** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i32*, i32** %3, align 8
  %7 = call i64 @git_buf_rfind(i32* %6, i8 signext 46)
  store i64 %7, i64* %5, align 8
  %8 = load i32*, i32** %3, align 8
  %9 = load i64, i64* %5, align 8
  %10 = add nsw i64 %9, 1
  %11 = call i32 @git_buf_truncate(i32* %8, i64 %10)
  %12 = load i32*, i32** %3, align 8
  %13 = load i8*, i8** %4, align 8
  %14 = call i32 @git_buf_puts(i32* %12, i8* %13)
  ret i32 %14
}

declare dso_local i64 @git_buf_rfind(i32*, i8 signext) #1

declare dso_local i32 @git_buf_truncate(i32*, i64) #1

declare dso_local i32 @git_buf_puts(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
